@@ -1,3 +1,4 @@
+* set_context of Transaction.set_user is restricted to root
 * Add a "copy" action to One2Many and Many2Many's set method
 * Force UTC as timezone (migration script available on tryton-tools)
 * Add relation_field for many2one
